src/objects/Wealth_Advisor__c.object
<CustomObject>
    <fields>
        <fullName>Customer_End_Date__c</fullName>
        <label>Customer End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Start_Date__c</fullName>
        <label>Customer Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Wealth_Advisor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Wealth Advisor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wealth_Advisor_Client__c</fullName>
        <label>Wealth Advisor Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Wealth Advisors</relationshipLabel>
        <relationshipName>Wealth_Advisors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Wealth_Advisor_Firm_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wealth Advisor Firm Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Wealth Advisor Clients</relationshipLabel>
        <relationshipName>Wealth_Advisors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wealth_Advisor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wealth Advisor Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Wealth Advisory Clients</relationshipLabel>
        <relationshipName>Wealth_Advisors1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wealth Advisor</label>
    <nameField>
        <displayFormat>WA-{00000}</displayFormat>
        <label>WA Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wealth Advisors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>